# passman

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  omer.json  vault.dat.bak
.github/workflows/: release.yml
src/: backup.rs  cli.rs  config.rs  core.rs  crypto.rs  error.rs  gui.rs  health.rs  import_export.rs  improvements.md  logging.rs  main.rs  model.rs  secure_clipboard.rs  secure_memory.rs  secure_types.rs  session.rs  tests.rs  two_factor.rs  utils.rs  vault.rs
src/gui/: app.rs  mod.rs  overlays.rs  theme.rs  toasts.rs  types.rs  widgets.rs
src/gui/screens/: entry.rs  health.rs  import_export.rs  main.rs  mod.rs  settings.rs  welcome.rs
wix/: main.wxs
