[package]
name = "passman"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rpassword = "7.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
rand_core = "0.6"
rand = "0.8"
aes-gcm = { version = "0.10", features = ["zeroize"] }
aes = "0.8"
aead = "0.5"
zeroize = { version = "1.6", features = ["derive"] }
typenum = "1.18"
clipboard = "0.5"
regex = "1.0"
atty = "0.2"
eframe = "0.29"
egui = "0.29"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
embed-resource = "2.4"
