[package]
name = "passman"
version = "1.0.0"
edition = "2021"
authors = ["0m3rexe"]
description = "A secure password manager with GUI and CLI interfaces"
license = "MIT"
repository = "https://github.com/0M3REXE/passman"
readme = "README.md"
keywords = ["password", "security", "encryption", "manager"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
atty = "0.2"
aes = "0.8"
aes-gcm = { version = "0.10", features = ["zeroize"] }
argon2 = "0.5"
clipboard = "0.5"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
eframe = "0.29"
egui = "0.29"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.4.0"
regex = "1.0"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
typenum = "1.18"
zeroize = { version = "1.6", features = ["derive"] }
# Additional security and utility dependencies
qr_code = "2.0"
totp-rs = "5.4"
uuid = { version = "1.6", features = ["v4"] }
ansi_term = "0.12"
notify = "6.1"
toml = "0.8"
# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Memory", "Win32_Foundation"] }

# Unix-specific dependencies  
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
embed-resource = "2.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
# Optimize for small binary size and security
lto = true
codegen-units = 1
panic = "abort"
strip = true
